k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote-backend
  namespace: tomemming
spec:
  selector:
    matchLabels:
      app: quote-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: quote-backend
    spec:
      containers:
        - name: php-fpm
          image: ghcr.io/tinux-it/quote-generator-backend:latest
          volumeMounts:
            - name: app-volume
              mountPath: /app
            - name: php-socket
              mountPath: /php-socket
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-volume
              mountPath: /app
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: php-socket
              mountPath: /php-socket
        - name: messenger-consumer
          image: ghcr.io/tinux-it/quote-generator-backend:latest
          command: [ "php", "/app/bin/console", "messenger:consume", "scheduler_send_daily_quote", "--no-interaction" ]
          volumeMounts:
            - name: app-volume
              mountPath: /app
      volumes:
        - name: app-volume
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: php-socket
          emptyDir: {}
