k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote-backend-service
  namespace: quote
spec:
  selector:
    app: quote-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
