k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quote-backend-ingress
  namespace: quote
spec:
  ingressClassName: traefik
  rules:
    - host: api.quote.tomemming.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quote-backend-service
                port:
                  number: 80
